@@ -1,3 +1,8 @@
+2014-03-15  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding more compatibility functions: getDescription, getLam4,5,
+	and getOrderPDF functions in old C++ wrapper.
+
 2014-03-15  Graeme Watt  <graeme.watt@durham.ac.uk>
 
 	* Adding new example programs testpdfunc and hessian2replicas,
